Added omain to the manifest

--- a/manifest.yml
+++ b/manifest.yml
@@ -6,6 +6,9 @@ applications:
   path: .
   buildpack: go_buildpack
   command: ./app-launching-service-broker
+  host: app-launching-service-broker-${random-word}
+  domain: 54.68.64.168.xip.io
+  path: .
   env:
     CF_API: http://api.54.68.64.168.xip.io
     CF_SRC: ./apps/spring-hello-env
