Fixed mainifest and config bug

--- a/manifest.yml
+++ b/manifest.yml
@@ -6,10 +6,8 @@ applications:
   path: .
   buildpack: go_buildpack
   host: app-launching-service-broker-${random-word}
-  domain: 54.68.64.168.xip.io
-  path: .
   env:
     CF_API: http://api.54.68.64.168.xip.io
     CF_SRC: ./apps/spring-hello-env
     CF_DEP: postgresql93|free,consul|free
-    CF_CAT: ../catalog.json
+    CF_CAT: ./catalog.json
