--- a/manifest.yml
+++ b/manifest.yml
@@ -10,4 +10,4 @@ applications:
     CF_API: https://api.gotapaas.com
     CF_SRC: ./apps/spring-hello-env
     CF_DEP: postgresql93|free,consul|free
-    CF_CAT: ./catalog.json
+    CF_CATALOG_PATH: ./catalog.json
