--- a/manifest.yml
+++ b/manifest.yml
@@ -1,11 +1,9 @@
 ---
 applications:
 - name: app-launching-service-broker
-  memory: 1G
+  memory: 256M
   instances: 1
   path: .
-  buildpack: https://github.com/cloudfoundry/buildpack-go.git
-  host: app-launching-service-broker
   env:
     CF_API: https://api.gotapaas.com
     CF_SRC: ./apps/spring-hello-env
