--- a/manifest.yml
+++ b/manifest.yml
@@ -6,6 +6,6 @@ applications:
   path: .
   env:
     CF_API: https://api.gotapaas.com
-    CF_SRC: ./apps/spring-hello-env
+    CF_SRC: ./apps/cf-env
     CF_DEP: postgresql93|free,consul|free
     CF_CATALOG_PATH: ./catalog.json
