--- a/manifest.yml
+++ b/manifest.yml
@@ -4,5 +4,6 @@ applications:
   memory: 256M
   instances: 1
   path: .
+  buildpack: https://github.com/cloudfoundry/buildpack-go.git
   env:
     CF_CATALOG_PATH: ./catalog.json
