--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-current_version = 0.9.10.0
+current_version = 0.4.1-SNAPSHOT
 tag = true
 tag_version = v{new_version}
 commit = true
