DPNG-5455 Descibed usage of app-dependency-discoverer by application-broker.
Signed-off-by: Marek Tomczewski <marek.tomczewski@intel.com>

DPNG-5455 Extracted a few modules for communication with Cloud Foundry out to go-cf-lib.

Signed-off-by: Marek Tomczewski <marek.tomczewski@intel.com>

DPNG-5455 Extracted DryRun functionality out to app-dependency-discoverer.

Signed-off-by: Marek Tomczewski <marek.tomczewski@intel.com>

DPNG-5455 Reading app-dependency-discoverer url and credentials from user provided service.

Signed-off-by: Marek Tomczewski <marek.tomczewski@intel.com>

DPNG-5455 Using same suffix for main app and all dependencies in application stack being cloned.

Signed-off-by: Marek Tomczewski <marek.tomczewski@intel.com>

DPNG-5455 Big refactor

Signed-off-by: Marek Tomczewski <marek.tomczewski@intel.com>

--- a/manifest.yml
+++ b/manifest.yml
@@ -8,6 +8,7 @@ applications:
   services:
     - application-broker-mongodb
     - nats-provider
+    - app-dependency-discoverer-ups
   env:
     AUTH_USER: admin
     AUTH_PASS: password
@@ -15,4 +16,4 @@ applications:
     CLIENT_SECRET: <provide oauth2 client secret>
     TOKEN_URL: <provide token url>
     CF_API: <provide api url>
-    VERSION: "0.5.32"
+    VERSION: "0.6.0"
