--- a/manifest.yml
+++ b/manifest.yml
@@ -12,8 +12,8 @@ applications:
   env:
     AUTH_USER: admin
     AUTH_PASS: password
-    CLIENT_ID: <provide oauth2 client id>
-    CLIENT_SECRET: <provide oauth2 client secret>
-    TOKEN_URL: <provide token url>
-    CF_API: <provide api url>
-    VERSION: "0.5.43"
+    CLIENT_ID: placeholder #<provide oauth2 client id>
+    CLIENT_SECRET: placeholder #<provide oauth2 client secret>
+    TOKEN_URL: placeholder #<provide token url>
+    CF_API: placeholder #<provide api url>
+    VERSION: "0.5.44"
